working-before-plugin

--- a/html.html
+++ b/html.html
@@ -8,10 +8,22 @@
 </head>
 
 <body>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4 text-center">Countries Data</h1>
+        </div>
+    </div>
+        <form class="form-inline row justify-content-md-center">
+            <div class="form-group mx-sm-3 mb-2">
+                <input type="text" class="form-control" id="inputCountry" placeholder="Enter country" required>
+            </div>
+            <button id="btnFlag" type="button" class="btn btn-primary mb-2">Show flag</button>
+        </form>
+        <div id="showFlag">
 
-
-    <script src="./Js/data.js"></script> 
-    <script src="./Js/jQuery.js"></script>   
+        </div>
+    <script src="./Js/data.js"></script>
+    <script src="./Js/jQuery.js"></script>
     <script src="./Js/index.js"></script>
 </body>
 
